Working on front end

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.9",
     "apollo-server": "^3.2.0",
     "graphql": "^15.5.1"
   }
