--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.9",
     "apollo-server": "^3.2.0",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "react-hooks": "^1.0.1"
   }
 }
